# Pattern2025

HW/HW01/: HW01_T2.ipynb  HW01_T3.ipynb  OT4_predictions.csv  T12_predictions.csv  _quarto.yml  main.py  pyproject.toml
HW/HW7/: Homework7_GANs.ipynb
HW/HW8/: HW8_student.ipynb  pyproject.toml
slides/L07/: README.md
