[project]
name = "hw8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "torchinfo>=1.8.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2.4",
    "opencv-python>=4.13.0.92",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

